--- a/Melanoma Checker/Melanoma Checker/Info.plist
+++ b/Melanoma Checker/Melanoma Checker/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Used to browse photos</string>
+	<string>$(PRODUCT_NAME) would like to access your photo</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Used to take photos</string>
+	<string>$(PRODUCT_NAME) would like to access your camera</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
